fix:ffmpeg package installation

--- a/render.yaml
+++ b/render.yaml
@@ -5,7 +5,7 @@ services:
     buildCommand: |
       pip install -r requirements.txt
       # Install FFmpeg for audio processing
-      apt-get update && apt-get install -y ffmpeg
+      sudo apt-get update && sudo apt-get install -y ffmpeg
     startCommand: "streamlit run app.py --server.port=$PORT --server.address=0.0.0.0"
     envVars:
       - key: PYTHON_VERSION
